projects/vb6parse/snapshots/syntax/statements/objects/call/procedure_call_non_print_semicolon_not_separator.snap
---
source: projects/vb6parse/src/syntax/statements/objects/call.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: Foo
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "1"
            - kind: ErrorRecovery
              children:
                - kind: ErrorExpectedTokens
                  text: statement
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "2"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
